RESOLVED FIXED249067
Fix ordering when calling requestFullscreen inside a frame
https://bugs.webkit.org/show_bug.cgi?id=249067
Summary Fix ordering when calling requestFullscreen inside a frame
Tim Nguyen (:ntim)
Reported 2022-12-09 22:03:27 PST
- Queue events in tree order when entering fullscreen - Add to top layer should always add at the end of the top layer
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-09 22:03:39 PST
Tim Nguyen (:ntim)
Comment 2 2022-12-09 22:06:58 PST
EWS
Comment 3 2022-12-09 22:32:13 PST
Committed 257673@main (1e45867f3dc4): <https://commits.webkit.org/257673@main> Reviewed commits have been landed. Closing PR #7432 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.