Fix ordering when calling requestFullscreen inside a frame https://bugs.webkit.org/show_bug.cgi?id=249067 rdar://103206507

Reviewed by Ryosuke Niwa.

- Queue events in tree order when entering fullscreen
- Add to top layer should always add at the end of the top layer

* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/element-ready-allowed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/element-request-fullscreen-and-exit-iframe-expected.txt:
* LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/fullscreen/api/element-request-fullscreen-timing-expected.txt:
* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::willEnterFullscreen):

Canonical link: https://commits.webkit.org/257673@main